src/test/resources/org/xmlcml/www/cmlcomp/invalid/joblist-two-empty-jobs.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    convention="conventions:cmlcomp"
    cmlx:note="A cmlcomp joblist which contains two empty jobs is invalid"
    xmlns="http://www.xml-cml.org/schema"
    xmlns:conventions="http://www.xml-cml.org/conventions/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">
    <module role="joblist">
        <module role="job"></module>
        <module role="job"></module>
    </module>
</cml>